--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ rvm:
 - 2.3.0
 env:
 - APIKEY=fd9b62fec0e8fc51ba345b2ff1803091
+before_script:
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
+- sleep 3
 script:
 - bundle exec rake db:migrate --trace
 - RAILS_ENV=test bundle exec rake db:migrate --trace
